[gd_scene load_steps=8 format=2]

[ext_resource path="res://Image/clock.png" type="Texture" id=1]
[ext_resource path="res://Script/minute.gd" type="Script" id=2]
[ext_resource path="res://Script/Road.gd" type="Script" id=3]
[ext_resource path="res://Image/card.png" type="Texture" id=4]
[ext_resource path="res://Image/secondhand.png" type="Texture" id=5]
[ext_resource path="res://Image/road_background.png" type="Texture" id=6]
[ext_resource path="res://Image/icon_battle.png" type="Texture" id=7]

[node name="Road" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 6 )

[node name="minute" type="Sprite" parent="."]
position = Vector2( 384, 330 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="minutehand" type="Sprite" parent="minute"]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 5 )

[node name="second" type="Sprite" parent="."]
position = Vector2( 1215, 431 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="secondhand" type="Sprite" parent="second"]
scale = Vector2( 0.125, 0.125 )
z_index = 1
texture = ExtResource( 5 )

[node name="road_pos" type="Node2D" parent="second"]

[node name="road_icon" type="Node2D" parent="second"]

[node name="Rest" type="Sprite" parent="."]
position = Vector2( 304, 920 )
scale = Vector2( 1.9604, 0.411165 )
texture = ExtResource( 4 )

[node name="Button" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 674.0
margin_top = 870.0
margin_right = 852.0
margin_bottom = 978.0

[node name="Sprite" type="Sprite" parent="Button"]
position = Vector2( 89, 55 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Button2" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 1046.0
margin_top = 871.0
margin_right = 1224.0
margin_bottom = 979.0

[node name="Sprite" type="Sprite" parent="Button2"]
position = Vector2( 89, 55 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Button3" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 1412.0
margin_top = 874.0
margin_right = 1590.0
margin_bottom = 982.0

[node name="Sprite" type="Sprite" parent="Button3"]
position = Vector2( 89, 55 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Button4" type="Button" parent="."]
margin_left = 1665.0
margin_top = 109.0
margin_right = 1773.0
margin_bottom = 214.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
